I added skip links,fixed color contrast and added a back to top button

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #f5f5f5;
   margin: 0;
   padding: 0;
 }
@@ -39,17 +39,32 @@ img {
 
 .main-nav ul li a {
   display: block;
-  color: inherit;
+  color: blue;
   text-decoration: none;
   font-size: 1.25rem;
 }
-
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background-color: #0056b3; 
+  color: #fff; 
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  }
+  .skip-link:focus {
+    top: 0; 
+    outline: none; 
+    background-color: #00376d; 
+  }
 form input,
 form textarea {
   display: block;
   width: 100%;
   margin-bottom: 1rem;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid;
+  
 }
 
 form textarea {
@@ -68,4 +83,13 @@ form button {
 
 .site-footer {
   padding: 2rem 0;
+}
+.back-to-top {
+  bottom: 20px;
+  right: 20px;
+  background-color: #0056b3; 
+  color: white; 
+  padding: 1rem;
+  font-size: 1rem;
+  text-decoration: none;
 }
